fixed dropdown fake borders on smaller chromium screen and removed labeller popup label list bottom padding when it has a horizontal scroll@

--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,11 @@
 .chromium-fake-dropdown-border-fix {
   background-color: grey;
   z-index: 2;
-  right: 1px;
+  right: 1.5px;
+}
+
+.chromium-fake-dropdown-border-fix-width {
+  width: 0.7px;
 }
 
 .popup-label-buttons {
